Remove unused airflow chart

--- a/mlflow/Chart.yaml
+++ b/mlflow/Chart.yaml
@@ -2,10 +2,10 @@ apiVersion: v2
 name: mlflow
 description: |
   [MLFlow](https://mlflow.org/) is an open source platform specialized in tracking ML experiments, and packaging and deploying ML models.
-home: "https://github.com/larribas/helm-charts/tree/master/mlflow"
+home: "DFDS.com"
 maintainers:
-  - email: contact@larribas.me
-    name: Lorenzo Arribas
+  - email: info@dfds.com
+    name: DFDS
 type: application
-version: 1.0.1
-appVersion: 1.7.2
+version: 0.1.0
+appVersion: 1.11.0
