--- a/mlflow/values.yaml
+++ b/mlflow/values.yaml
@@ -22,10 +22,10 @@ extraArgs: {}
 replicaCount: 1
 
 image:
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
   # image.repository -- The fully qualified name of the docker image to use
-  repository: larribas/mlflow
+  repository: dingobar/mlflow
 
   # image.tag -- The tag for the repository (e.g. 'latest')
   tag:
