--- a/mlflow/values.yaml
+++ b/mlflow/values.yaml
@@ -31,12 +31,12 @@ image:
   tag:
 
 imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
+nameOverride: "mlflow-tracking-server"
+fullnameOverride: "mlflow-chart"
 
 serviceAccount:
   # serviceAccount.create -- Specifies whether a service account should be created
-  create: true
+  create: false
   # serviceAccount.annotations -- Annotations to add to the service account
   annotations: {}
   # serviceAccount.name -- The name of the service account to use. If not set and create is true, a name is generated using the fullname template
