--- a/mlflow/values.yaml
+++ b/mlflow/values.yaml
@@ -15,7 +15,8 @@ backendStore:
 defaultArtifactRoot: $(MLFLOW_S3_BACKEND_URI)
 
 # extraArgs -- A map of arguments and values to pass to the `mlflow server` command
-extraArgs: {}
+extraArgs:
+  {}
   # workers: 2
   # expose-prometheus: yes
 
@@ -42,10 +43,12 @@ serviceAccount:
   # serviceAccount.name -- The name of the service account to use. If not set and create is true, a name is generated using the fullname template
   name:
 
-podSecurityContext: {}
+podSecurityContext:
+  {}
   # fsGroup: 2000
 
-securityContext: {}
+securityContext:
+  {}
   # capabilities:
   #   drop:
   #   - ALL
@@ -59,7 +62,7 @@ service:
 
 ingress:
   enabled: false
-  annotations: {}
+  annotations:
     kubernetes.io/ingress.class: traefik
     traefik.frontend.rule.type: PathPrefixStrip
     traefik.ingress.kubernetes.io/auth-type: basic
