--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,5 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+# This pipeline builds the docker image and pushes it to ECR,
+# before publishing the helm chart to the same repository
 
 trigger:
 - master
@@ -19,13 +17,29 @@ steps:
     helmVersion: '2.14.1'
     installKubectl: true
 - task: AWSShellScript@1
+  displayName: Save and push chart
   inputs:
     awsCredentials: 'ECR Push'
     regionName: 'eu-central-1'
     scriptType: 'inline'
     inlineScript: |
       set -e
-      echo "will this work?"
+      echo "Deploying the helm chart to ECR"
       echo $(helm version)
       helm chart save mlflow-chart/ mlflow
       helm chart save mlflow-chart/ 579478677147.dkr.ecr.eu-central-1.amazonaws.com/dna/mlflow:mlflow
+- task: Docker@2
+  displayName: Build docker image
+  inputs:
+    command: 'build'
+    Dockerfile: '**/mlflow-image/Dockerfile'
+    tags: 'latest'
+    arguments: '-t dna.mlflow'
+- task: ECRPushImage@1
+  displayName: Push the image to shared ECR
+  inputs:
+    awsCredentials: 'ECR Push'
+    regionName: 'eu-central-1'
+    imageSource: 'imagename'
+    sourceImageName: 'dna.mlflow'
+    repositoryName: 'dna/mlflow'
