Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,11 +23,12 @@ steps:
     regionName: 'eu-central-1'
     scriptType: 'inline'
     inlineScript: |
-      set -e
       echo "Deploying the helm chart to ECR"
       echo $(helm version)
       helm chart save mlflow-chart/ mlflow
       helm chart save mlflow-chart/ 579478677147.dkr.ecr.eu-central-1.amazonaws.com/dna/mlflow:mlflow
+      helm chart push 579478677147.dkr.ecr.eu-central-1.amazonaws.com/dna/mlflow:mlflow
+    failOnStandardError: true
 - task: Docker@2
   displayName: Build docker image
   inputs:
