--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,7 +44,7 @@ steps:
         helm chart save mlflow-chart/ 272250499452.dkr.ecr.eu-central-1.amazonaws.com/dna/mlflow:mlflow
         aws ecr describe-repositories --repository-names dna/mlflow || aws ecr create-repository --repository-name dna/mlflow
         aws ecr get-login-password \
-          --region us-west-2 | helm registry login \
+          --region eu-central-1 | helm registry login \
           --username AWS \
           --password-stdin 272250499452.dkr.ecr.eu-central-1.amazonaws.com
         helm chart push 272250499452.dkr.ecr.eu-central-1.amazonaws.com/dna/mlflow:mlflow
