--- a/mlflow-image/docker-compose.yml
+++ b/mlflow-image/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    command: --host=0.0.0.0 --port=80 --backend-store-uri=postgresql://postgres:postgres@db:5432 --default-artifact-root=file//var/mlflow/mlruns
     environment:
       - DBUSERNAME=postgres
       - DBPASSWORD=postgres
@@ -11,7 +12,7 @@ services:
       - DBDATABASE=postgres
       - MLFLOW_ARTIFACT_S3_URI=/var/mlflow/mlruns
     ports:
-      - "5000:5000"
+      - "5000:80"
     depends_on:
       - db
     volumes:
