--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ resources:
 - repo: self
 
 variables:
-  tag: '$(Build.BuildId)'
+  tag:
 
 stages:
 - stage: Build
@@ -20,7 +20,9 @@ stages:
     pool:
       vmImage: ubuntu-latest
     steps:
-    - bash: export MLFLOW_VERSION=$(cat mlflow-image/mlflow_version)
+    - bash: |
+        MLFLOW_VERSION=$(cat mlflow-image/mlflow_version)
+        echo '##vso[task.setvariable variable=tag]$(MLFLOW_VERSION)'
     - task: Docker@2
       displayName: Build an image
       inputs:
