--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ resources:
 - repo: self
 
 variables:
-  tag:
+  tag: $[ cat mlflow-image/mlflow_version ]
 
 stages:
 - stage: Build
@@ -20,9 +20,6 @@ stages:
     pool:
       vmImage: ubuntu-latest
     steps:
-    - bash: |
-        MLFLOW_VERSION=$(cat mlflow-image/mlflow_version)
-        echo '##vso[task.setvariable variable=tag]$(MLFLOW_VERSION)'
     - task: Docker@2
       displayName: Build an image
       inputs:
