--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,9 +8,6 @@ trigger:
 resources:
 - repo: self
 
-variables:
-  tag: $[ cat mlflow-image/mlflow_version ]
-
 stages:
 - stage: Build
   displayName: Build image
@@ -20,12 +17,16 @@ stages:
     pool:
       vmImage: ubuntu-latest
     steps:
+    - bash: |
+        MLFLOW_VERSION = $(cat ./mlflow-image/mlflow_version)
+        echo $MLFLOW_VERSION
+        echo "##vso[task.setvariable variable=tag;isOutput=true]$MLFLOW_VERSION"
     - task: Docker@2
       displayName: Build an image
       inputs:
         command: 'build'
         Dockerfile: './mlflow-image/Dockerfile'
-        arguments: '-t mlflow:$(tag)'
+        arguments: '-t mlflow:$(mystep.tag)'
     - task: ECRPushImage@1
       inputs:
         awsCredentials: "ECR Push"
