--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,12 +21,13 @@ stages:
         MLFLOW_VERSION=$(cat ./mlflow-image/mlflow_version)
         echo $MLFLOW_VERSION
         echo "##vso[task.setvariable variable=tag;isOutput=true]$MLFLOW_VERSION"
+      name: mlflow_version
     - task: Docker@2
       displayName: Build an image
       inputs:
         command: 'build'
         Dockerfile: './mlflow-image/Dockerfile'
-        arguments: '-t mlflow:$(mystep.tag)'
+        arguments: '-t mlflow:$(mlflow_version.tag)'
     - task: ECRPushImage@1
       inputs:
         awsCredentials: "ECR Push"
