Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,5 +84,5 @@ stages:
           terraform init
           terraform apply -auto-approve plan.tfplan
         disableAutoCwd: true
-        workingDirectory: '$(System.ArtifactsDirectory)/tf/infrastructure'
+        workingDirectory: '$(System.ArtifactsDirectory)/tf/'
         failOnStandardError: true
