--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ stages:
         disableAutoCwd: true
         workingDirectory: '$(System.DefaultWorkingDirectory)/infrastructure'
         failOnStandardError: true
-    - publish: '$(System.DefaultWorkingDirectory)/infrastructure'
+    - publish: 'infrastructure'
       artifact: 'tf'
 - stage: Deploy
   displayName: Deploy infrastructure
