include extras in image

--- a/mlflow-image/Dockerfile
+++ b/mlflow-image/Dockerfile
@@ -6,7 +6,7 @@ RUN pip install pip setuptools --upgrade
 COPY mlflow_version mlflow_version
 
 # Dependency versions locked at 12-04-2021
-RUN pip install mlflow==$(cat mlflow_version) psycopg2-binary==2.8.6
+RUN pip install mlflow[extras]==$(cat mlflow_version) psycopg2-binary==2.8.6
 
 # Set the workdir to /var/mlflow, so that /var/mlflow/.mlruns can be mounted if desired
 RUN mkdir /var/mlflow
