Create PR when new mlflo release is detected

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,8 +3,9 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-- master
-
+  tags:
+    include:
+    - "v*"
 resources:
 - repo: self
 
