--- a/.github/workflows/check-mlflow-release.yml
+++ b/.github/workflows/check-mlflow-release.yml
@@ -11,25 +11,19 @@ jobs:
         run: |
           curl -sL https://api.github.com/repos/mlflow/mlflow/releases/latest | \
           jq -r ".tag_name" | \
-          sed 's/v//g'
+          sed 's/v//g' > mlflow-image/mlflow_version
       - name: Check for modified files
         id: git-check
         run:
           echo ::set-output name=modified::$([ -z "`git status --porcelain`" ] && echo "false" ||
           echo "true")
-      #      - name: Commit latest release version
-      #        run: |
-      #          git config --global user.name 'mamor1'
-      #          git config --global user.email 'your-email@users.noreply.github.com'
-      #          git commit -am "New release version"
-      #          git push
       - name: Create PR with new version
         if: steps.git-check.outputs.modified == 'true'
         uses: technote-space/create-pr-action@v2.0.4
         with:
           EXECUTE_COMMANDS: |
             cat "New release version found: $(cat mlflow-image/mlflow_version)"
-          COMMIT_MESSAGE: "chore: update npm dependencies"
+          COMMIT_MESSAGE: "Release mlflow version $(cat mlflow-image/mlflow_version)"
           COMMIT_NAME: "Automatically detected mlflow release"
           COMMIT_EMAIL: "example@example.com"
           PR_BRANCH_NAME: "feat/mlflow-v$(cat mlflow-image/mlflow_version)-${PR_ID}"
