--- a/.github/workflows/check-mlflow-release.yml
+++ b/.github/workflows/check-mlflow-release.yml
@@ -32,3 +32,5 @@ jobs:
             [2]: https://github.com/peter-evans/create-pull-request
           labels: dependencies, automated pr
           branch: mlflow-releases
+          reviewers: kplauritzen,kaqmak,nybyhansen,pacanada
+          team-reviewers: data-science-chapter
