--- a/.github/workflows/check-mlflow-release.yml
+++ b/.github/workflows/check-mlflow-release.yml
@@ -13,7 +13,7 @@ jobs:
           echo ::set-output name=release_tag::$(curl -sL https://api.github.com/repos/mlflow/mlflow/releases/latest | jq -r ".tag_name" | sed 's/v//g')
           echo ::set-output name=current_tag::$(<mlflow-image/mlflow_version)
       - name: Update MLFlow version file
-        if: steps.mlflow-release.outputs.current_tag != steps.mlflow-release.outputs.release_tag
+        if: (steps.mlflow-release.outputs.current_tag != steps.mlflow-release.outputs.release_tag) && (steps.mlflow-release.outputs.release_tag != 'null')
         env:
           RELEASE_TAG: ${{ steps.mlflow-release.outputs.release_tag }}
         run: |
