removed kasper and Dennis as reviewers
The workflow fails, since Dennis and Kasper are no longer colloborators to the DFDS workspace

--- a/.github/workflows/check-mlflow-release.yml
+++ b/.github/workflows/check-mlflow-release.yml
@@ -32,4 +32,4 @@ jobs:
             [2]: https://github.com/peter-evans/create-pull-request
           labels: dependencies, automated pr
           branch: mlflow-releases
-          reviewers: kplauritzen,kaqmak,nybyhansen,pacanada
+          reviewers: kaqmak,pacanada
